redis/kubernetes/redis-simple-ss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-simple-ss
  namespace: redis
  labels:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis-simple-ss
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis-simple-ss
---
apiVersion: v1
kind: Service
metadata:
  name: redis-simple-ss-nodeport
  namespace: redis
  labels:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis-simple-ss
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis-simple-ss
